force-app/main/default/objects/BPF__c/fields/RepresentHUS__c.field-meta.xml
<CustomField>
    <fullName>RepresentHUS__c</fullName>
    <inlineHelpText>Will client represent Hoogwegt in front of government or regulatory authorities, entities or officials?</inlineHelpText>
    <label>Represent HUS ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>