force-app/main/default/objects/BPF__c/fields/SignatureEmail__c.field-meta.xml
<CustomField>
    <fullName>SignatureEmail__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>