force-app/main/default/objects/BPF__c/fields/SignatureName__c.field-meta.xml
<CustomField>
    <fullName>SignatureName__c</fullName>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>