force-app/main/default/objects/BPF__c/fields/SignaturePhone__c.field-meta.xml
<CustomField>
    <fullName>SignaturePhone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>