force-app/main/default/objects/BPF__c/fields/SignatureTitle__c.field-meta.xml
<CustomField>
    <fullName>SignatureTitle__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>