force-app/main/default/objects/BPF__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BPF Renewal</fullName>
            </value>
            <value>
                <fullName>BPF Trader In Process</fullName>
                <default>true</default>
                <label>BPF Trader In Process</label>
            </value>
            <value>
                <fullName>BPF Trader Completed</fullName>
            </value>
            <value>
                <fullName>BPF Customer Input WIP</fullName>
            </value>
            <value>
                <fullName>BPF Customer Input Completed</fullName>
            </value>
            <value>
                <fullName>BPF World Check In Review</fullName>
            </value>
            <value>
                <fullName>BPF World Check Passed</fullName>
            </value>
            <value>
                <fullName>Trader Approval</fullName>
            </value>
            <value>
                <fullName>BPF Signed</fullName>
            </value>
            <value>
                <fullName>BPF Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>