force-app/main/default/objects/BPF__c/fields/TaxAvoidanceDetails__c.field-meta.xml
<CustomField>
    <fullName>TaxAvoidanceDetails__c</fullName>
    <inlineHelpText>If there are indications of tax avoidance (for example tax havens) by client, please provide details.</inlineHelpText>
    <label>Tax Avoidance Details ?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>