force-app/main/default/objects/BPF__c/fields/TaxIDorRegistration__c.field-meta.xml
<CustomField>
    <fullName>TaxIDorRegistration__c</fullName>
    <label>Tax ID # or Registration #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>