force-app/main/default/objects/BPF__c/fields/Trader_Ties_Details__c.field-meta.xml
<CustomField>
    <fullName>Trader_Ties_Details__c</fullName>
    <inlineHelpText>If you have any personal associations or family ties with customer, please provide details.</inlineHelpText>
    <label>Trader Ties Customer Details ?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>