force-app/main/default/objects/BPF__c/fields/TraderInfo__c.field-meta.xml
<CustomField>
    <fullName>TraderInfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trader Info</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>BPF</relationshipLabel>
    <relationshipName>BPF</relationshipName>
    <type>Lookup</type>
</CustomField>