force-app/main/default/objects/BPF__c/fields/Typeofaccount__c.field-meta.xml
<CustomField>
    <fullName>Typeofaccount__c</fullName>
    <label>Type of account:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>