force-app/main/default/objects/BPF__c/fields/UBO_1__c.field-meta.xml
<CustomField>
    <fullName>UBO_1__c</fullName>
    <label>UBO 1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>