force-app/main/default/objects/BPF__c/fields/UBO_2__c.field-meta.xml
<CustomField>
    <fullName>UBO_2__c</fullName>
    <label>UBO 2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>