force-app/main/default/objects/BPF__c/fields/UBO_3__c.field-meta.xml
<CustomField>
    <fullName>UBO_3__c</fullName>
    <label>UBO 3</label>
    <length>18</length>
    <type>Text</type>
</CustomField>