force-app/main/default/objects/BPF__c/fields/Ultimate_Beneficial_Owner_UBO_2__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Beneficial_Owner_UBO_2__c</fullName>
    <label>Ultimate Beneficial Owner (UBO) 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>