force-app/main/default/objects/BPF__c/fields/Ultimate_Beneficial_Owner_UBO_2_per__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Beneficial_Owner_UBO_2_per__c</fullName>
    <label>Ultimate Beneficial Owner (UBO) 2 %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>