force-app/main/default/objects/BPF__c/fields/Vat__c.field-meta.xml
<CustomField>
    <fullName>Vat__c</fullName>
    <label>Vat #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>