force-app/main/default/objects/BPF__c/fields/Vatifapplicable__c.field-meta.xml
<CustomField>
    <fullName>Vatifapplicable__c</fullName>
    <label>Vat # (if applicable)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>