force-app/main/default/objects/BPF__c/fields/YearofIncorporation__c.field-meta.xml
<CustomField>
    <fullName>YearofIncorporation__c</fullName>
    <label>Date of Incorporation</label>
    <type>Date</type>
</CustomField>