force-app/main/default/objects/BPF__c/validationRules/Expiration_Date_on_BPF_Signed.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiration_Date_on_BPF_Signed</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Stage__c , &apos;BPF Signed&apos;)  &amp;&amp; ISBLANK(ExpirationDate__c )</errorConditionFormula>
    <errorDisplayField>ExpirationDate__c</errorDisplayField>
    <errorMessage>Please select date BPF was signed</errorMessage>
</ValidationRule>