force-app/main/default/objects/BPF__c/validationRules/Trader_Approval_stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Trader_Approval_stage</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL( Stage__c , &apos;Trader Approval&apos;),
OR( 
NOT( ISPICKVAL( PRIORVALUE(Stage__c) , &apos;BPF World Check Passed&apos;)),
NOT( ISPICKVAL( PRIORVALUE(Stage__c) , &apos;BPF World Check In Review&apos;))
))</errorConditionFormula>
    <errorMessage>Previous stage must be either &apos;BPF World Check Passed&apos; or  &apos;BPF World Check In Review&apos; .</errorMessage>
</ValidationRule>