force-app/main/default/objects/BPF__c/validationRules/Validation_for_BPF_Signed.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_BPF_Signed</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Stage__c , &apos;BPF Signed&apos;), (  $User.Email != &apos;t.knegtel@hoogwegtus.com&apos;))</errorConditionFormula>
    <errorMessage>Only Theo can Sign the BPF Record. Please Contact Theo.</errorMessage>
</ValidationRule>