force-app/main/default/objects/BPF__c/validationRules/Validation_for_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Customer</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Stage__c , &apos;BPF Signed &amp; Active&apos;),NOT( ISPICKVAL( PRIORVALUE(Stage__c) , &apos;BPF Signed&apos;)))</errorConditionFormula>
    <errorMessage>Can not update to BPF Signed &amp; Active, First update to BPF Signed.</errorMessage>
</ValidationRule>