force-app/main/default/objects/BPF__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>ExpirationDate__c</columns>
    <columns>AccountName__c</columns>
    <columns>Legalentitytype__c</columns>
    <columns>LineofBusiness__c</columns>
    <columns>Methodofpayment__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>