force-app/main/default/objects/BPF__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>AccountName__c</columns>
    <columns>Stage__c</columns>
    <columns>ExpirationDate__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>