force-app/main/default/objects/BPF__c/listViews/BPF_View.listView-meta.xml
<ListView>
    <fullName>BPF_View</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>ExpirationDate__c</columns>
    <columns>AccountName__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>BPF View</label>
</ListView>