force-app/main/default/objects/BPF__c/listViews/My_BPF_Records.listView-meta.xml
<ListView>
    <fullName>My_BPF_Records</fullName>
    <columns>NAME</columns>
    <columns>ExpirationDate__c</columns>
    <columns>Legalentitytype__c</columns>
    <columns>LineofBusiness__c</columns>
    <columns>Methodofpayment__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Mine</filterScope>
    <label>My BPF Records</label>
</ListView>