force-app/main/default/objects/BPF__c/listViews/Stage_BPF_Customer_Input_Completed.listView-meta.xml
<ListView>
    <fullName>Stage_BPF_Customer_Input_Completed</fullName>
    <columns>NAME</columns>
    <columns>ExpirationDate__c</columns>
    <columns>Legalentitytype__c</columns>
    <columns>LineofBusiness__c</columns>
    <columns>Methodofpayment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>BPF Customer Input Completed</value>
    </filters>
    <label>Stage05: BPF Customer Input Completed</label>
</ListView>