force-app/main/default/objects/BPF__c/listViews/Stage_BPF_Renewal.listView-meta.xml
<ListView>
    <fullName>Stage_BPF_Renewal</fullName>
    <columns>NAME</columns>
    <columns>ExpirationDate__c</columns>
    <columns>Legalentitytype__c</columns>
    <columns>LineofBusiness__c</columns>
    <columns>Methodofpayment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>BPF Renewal</value>
    </filters>
    <label>Stage01: BPF Renewal</label>
</ListView>