force-app/main/default/objects/BPF__c/listViews/Stage_BPF_Trader_In_Process.listView-meta.xml
<ListView>
    <fullName>Stage_BPF_Trader_In_Process</fullName>
    <columns>NAME</columns>
    <columns>ExpirationDate__c</columns>
    <columns>Legalentitytype__c</columns>
    <columns>LineofBusiness__c</columns>
    <columns>Methodofpayment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>BPF Trader In Process</value>
    </filters>
    <label>Stage02: BPF Trader In Process</label>
</ListView>