force-app/main/default/objects/BPF__c/listViews/Stage_Prospect_Data_Approved.listView-meta.xml
<ListView>
    <fullName>Stage_Prospect_Data_Approved</fullName>
    <columns>NAME</columns>
    <columns>ExpirationDate__c</columns>
    <columns>Legalentitytype__c</columns>
    <columns>LineofBusiness__c</columns>
    <columns>Methodofpayment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Prospect Data Approved</value>
    </filters>
    <label>Stage07: Prospect Data Approved</label>
</ListView>