force-app/main/default/objects/BPF__c/listViews/Stage_Prospect_Info_Reviewed_by_Credit.listView-meta.xml
<ListView>
    <fullName>Stage_Prospect_Info_Reviewed_by_Credit</fullName>
    <columns>NAME</columns>
    <columns>ExpirationDate__c</columns>
    <columns>Legalentitytype__c</columns>
    <columns>LineofBusiness__c</columns>
    <columns>Methodofpayment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Prospect Info Reviewed by CreditSafe</value>
    </filters>
    <label>Stage08: Prospect Info Reviewd by Credit</label>
</ListView>