force-app/main/default/objects/BPF__c/listViews/Stage_WC_One_Response_Received.listView-meta.xml
<ListView>
    <fullName>Stage_WC_One_Response_Received</fullName>
    <columns>NAME</columns>
    <columns>ExpirationDate__c</columns>
    <columns>Legalentitytype__c</columns>
    <columns>LineofBusiness__c</columns>
    <columns>Methodofpayment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>BPF World Check One Response Received</value>
    </filters>
    <label>Stage06: WC One Response Received</label>
</ListView>